# pymc-forecast

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  conf.py  index.md  prediction-schema.md  quickstart.md  schema.md
docs/api/: data.md  datasets.md  evaluate.md  exceptions.md  features.md  forecaster.md  gaussian.md  index.md  markov.md  metrics.md  model.md  prediction.md  priors.md  statespace.md
docs/examples/: exponential_smoothing_state_space.ipynb  forecasting_hierarchical.ipynb  forecasting_univariate.ipynb  fresh_retail_stockout.ipynb  hierarchical_forecasting.ipynb  index.md  retail_stockouts.ipynb  scan_vs_statespace_local_level.ipynb  statespace_forecaster.ipynb  victoria_electricity.ipynb
pymc_forecast/: __init__.py  data.py  datasets.py  evaluate.py  exceptions.py  features.py  forecaster.py  gaussian.py  jax_backend.py  markov.py  metrics.py  model.py  prediction.py  priors.py  statespace.py
pymc_forecast/data/: victoria_electricity.csv
scripts/: run_notebook_smoke_tests.py
tests/: example_models.py  test_data.py  test_datasets.py  test_evaluate.py  test_features.py  test_forecaster.py  test_markov.py  test_metrics.py  test_model.py  test_mvn.py  test_package.py  test_prediction.py  test_priors.py  test_replay_mechanism.py  test_schema.py  test_statespace.py
