[project]
name = "pymc-forecast"
version = "0.2.0"
description = "Bayesian time-series forecasting with PyMC: train/forecast plumbing, backtesting, and metrics."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "PyMC Labs" }]
keywords = ["bayesian", "time-series", "forecasting", "pymc"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pymc>=5.20",
    "arviz>=0.20",
    "numpy",
    "pooch",
    "xarray",
]

[project.optional-dependencies]
dataframes = ["pandas"]
extras = ["pymc-extras>=0.10"]
jax = ["jax"]

[project.urls]
Repository = "https://github.com/pymc-labs/pymc-forecast"
Issues = "https://github.com/pymc-labs/pymc-forecast/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx>=8",
    "pydata-sphinx-theme>=0.16",
    "myst-nb>=1.1",
    "sphinx-copybutton",
]
notebooks = [
    "jax",
    "matplotlib",
    "pandas",
    "ipykernel",
    "nbconvert",
    "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pymc_forecast"]

[tool.hatch.build.targets.sdist]
only-include = ["pymc_forecast", "tests", "PLAN.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
